--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nanum+Pen+Script&family=Platypi:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="./estilo/estilo.css">
     <title>Cannis Petshop</title>
 </head>
 <body>
@@ -60,7 +64,7 @@
     </div>
     <div class="container-fluid mt-0 mb-0 p-0">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 animate__animated animate__zoomIn">
                 <a href="./pages/Gatos.html" class="d-block mb-3 mb-md-0 position-relative overflow-hidden rounded">
                 <img src="img/cat-6593947_1280.jpg" alt="alimento, gatos, envíos, petshop" class="img-fluid w-100">
                 <div class="overlay">
@@ -68,9 +72,9 @@
                 </div>
                 </a>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 animate__animated animate__zoomIn">
                 <a href="./pages/Perros.html" class="d-block position-relative overflow-hidden rounded">
-                <img src="img/puppy-1903313_1280.jpg" alt="alimento, perros, comida, a, domicilio" class="img-fluid w-100">
+                <img src="img/puppy-1903313_1280.jpg" alt="alimento, perros, comida, a, domicilio" class="img-fluid w-100 ">
                 <div class="overlay">
                     <p class="text-center text-white mb-0">Todo para perros</p>
                 </div>
@@ -80,14 +84,14 @@
     </div>
     <div class="fondo">
         <h2 class="marcas">Buscá por marcas</h2>
-        <div class="top-images">
+        <div class="top-images animate__animated animate__fadeInUp">
             <img class="expand" src="img/royal.png" alt="Royal, Canin, alimento, mascota">
-            <img class="expand" src="img/excellent2.png" alt="excellent, purina, alimento, mascota, comida, perro, gato">
+            <img class="expand subir" src="img/excellent2.png" alt="excellent, purina, alimento, mascota, comida, perro, gato">
         </div>
-        <div class="bottom-images">
-            <img class="expand" src="img/proplan3.png" alt="proplan, alimento, mascota, perro, gato">
-            <img class="expand" src="img/oldprince.png" alt="old prince, comida, perro, gato">
-            <img class="expand" src="img/eukanuba.png" alt="eukanuba, alimento, perro, gato, petshop">
+        <div class="bottom-images animate__animated animate__fadeInUp">
+            <img class="expand subir" src="img/proplan3.png" alt="proplan, alimento, mascota, perro, gato">
+            <img class="expand subir" src="img/oldprince.png" alt="old prince, comida, perro, gato">
+            <img class="expand subir" src="img/eukanuba.png" alt="eukanuba, alimento, perro, gato, petshop">
         </div>
     </div>
     <div>
