--- a/pages/Perros.html
+++ b/pages/Perros.html
@@ -7,11 +7,15 @@
     <meta name="keywords" content="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal, canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
     <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nanum+Pen+Script&family=Platypi:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../estilo/estilo.css">
     <title>Perros</title>
 </head>
 <body>
@@ -70,7 +74,7 @@
                 </div>
             </div>
             <div class="col-lg-9">
-                <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4">
+                <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4 animate__animated animate__slideInRight">
                     <div class="col">
                         <div class="card expand">
                             <img src="../img/Proplan perro/PROPLAN-ADULTO-LARGE.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
