--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -7,11 +7,15 @@
     <meta name="keywords" content="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal, canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato">
     <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nanum+Pen+Script&family=Platypi:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nanum+Pen+Script&family=Platypi:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../estilo/estilo.css">
     <title>Productos</title>
 </head>
 <body>
@@ -86,8 +90,8 @@
                 </div>
             </div>
             <div class="col-lg-9">
-                <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4">
-                    <div class="col">
+                <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4 animate__animated animate__slideInRight">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Proplan perro/PROPLAN-ADULTO-LARGE.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -97,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Proplan gatos/PROPLAN-KITTEN.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -107,7 +111,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Excellent perro/EXCELLENT-ADULTO-MED-GDE-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -117,7 +121,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Excellent gatos/Excellent-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -127,7 +131,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Excellent gatos/EXCELLENT-SKIN-CARE-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -137,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Eukanuba/euk-imagen-nueva-adul-med-ver-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -147,7 +151,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Old prince perro/OLD-PRINCE-PERRO-CORDERO-MED-GDE-ADULTO.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -157,7 +161,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Eukanuba/EUKANUBA-SENIOR-LARGE-OK-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -167,7 +171,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Royal gato/ROYAL-GASTRO-GATO-e1668089064540-441x405-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -177,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Old prince gatos/OLD-PRINCE-CORDERO-GATO-ADULTO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -187,7 +191,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Excellent perro/EXCELLENT-ADULTO-SMALL-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -197,7 +201,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Proplan perro/PROPLAN-PUPPY-LARGE-441x441.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -207,7 +211,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Royal gato/Royal_gato-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -217,7 +221,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Old prince perro/premium-cachorro-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
@@ -227,7 +231,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col  ">
                         <div class="card expand">
                             <img src="../img/Excellent gatos/EXCELLENT-URINARY-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
